@@ -1,18 +1,14 @@
-package Prowincje;
-
-import Prowincje.Province;
-
-import java.util.Arrays;
+package menuStartPackage.Prowincje;
 import java.util.List;
 
-public class City extends Province {
+public class Mountains extends Province{
     List<String> resources = List.of();
-    String type = "Miasto";
+    String type = "Gory";
     List<String> possibleBuildings = List.of();
-    List<String> baseBuildings = Arrays.asList("Dzielnica mieszkaniowa", "Targ", "Koszary", "Świątynia", "Magazyn");
+    List<String> baseBuildings = List.of();
 
 
-    City(){
+    Mountains(){
         setResources(resources);
         setType(type);
         setBaseProduction(type);
